clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00026.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00026.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[6] = ConstArray { ty: Array { element_type: Named("s8i"), size: 6 }, elts: Str("hello"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s8i*, "p", align 8
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @.str : s8i[6]*
        %4 = cast(array_to_ptrdecay) %3 : s8i*
        store %4, %1, align 8
        %5 = const 0 : s64i
        %6 = load %1 : s8i*, align 8
        ptr_stride
        %8 = load %7 : s8i, align 1
        %9 = cast(integral) %8 : s32i
        %10 = const 104 : s32i
        sub
        store %11, %0
        %12 = load %0 : s32i
        return %12
}
