clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00032.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00032.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i[2], "arr", align 4
        %2 = alloca s32i*, "p", align 8
        %3 = const 0 : s32i
        store %3, %0
        %4 = const 2 : s32i
        %5 = const 0 : s64i
        get_element
        store %4, %6, align 4
        %7 = const 3 : s32i
        %8 = const 1 : s64i
        get_element
        store %7, %9, align 4
        %10 = const 0 : s64i
        get_element
        store %11, %2, align 8
        scope {
                %60 = load %2 : s32i*, align 8
                %61 = const 1 : s32i
                ptr_stride
                store %62, %2, align 8
                %63 = load %60 : s32i, align 4
                %64 = const 2 : s32i
                cmp
                if %65 {
                        %66 = const 1 : s32i
                        store %66, %0
                        %67 = load %0 : s32i
                        return %67
                }
                yield
        }
        scope {
                %52 = load %2 : s32i*, align 8
                %53 = const 1 : s32i
                ptr_stride
                store %54, %2, align 8
                %55 = load %52 : s32i, align 4
                %56 = const 3 : s32i
                cmp
                if %57 {
                        %58 = const 2 : s32i
                        store %58, %0
                        %59 = load %0 : s32i
                        return %59
                }
                yield
        }
        %12 = const 1 : s64i
        get_element
        store %13, %2, align 8
        scope {
                %44 = load %2 : s32i*, align 8
                %45 = const -1 : s32i
                ptr_stride
                store %46, %2, align 8
                %47 = load %44 : s32i, align 4
                %48 = const 3 : s32i
                cmp
                if %49 {
                        %50 = const 1 : s32i
                        store %50, %0
                        %51 = load %0 : s32i
                        return %51
                }
                yield
        }
        scope {
                %36 = load %2 : s32i*, align 8
                %37 = const -1 : s32i
                ptr_stride
                store %38, %2, align 8
                %39 = load %36 : s32i, align 4
                %40 = const 2 : s32i
                cmp
                if %41 {
                        %42 = const 2 : s32i
                        store %42, %0
                        %43 = load %0 : s32i
                        return %43
                }
                yield
        }
        %14 = const 0 : s64i
        get_element
        store %15, %2, align 8
        scope {
                %28 = load %2 : s32i*, align 8
                %29 = const 1 : s32i
                ptr_stride
                store %30, %2, align 8
                %31 = load %30 : s32i, align 4
                %32 = const 3 : s32i
                cmp
                if %33 {
                        %34 = const 1 : s32i
                        store %34, %0
                        %35 = load %0 : s32i
                        return %35
                }
                yield
        }
        %16 = const 1 : s64i
        get_element
        store %17, %2, align 8
        scope {
                %20 = load %2 : s32i*, align 8
                %21 = const -1 : s32i
                ptr_stride
                store %22, %2, align 8
                %23 = load %22 : s32i, align 4
                %24 = const 2 : s32i
                cmp
                if %25 {
                        %26 = const 1 : s32i
                        store %26, %0
                        %27 = load %0 : s32i
                        return %27
                }
                yield
        }
        %18 = const 0 : s32i
        store %18, %0
        %19 = load %0 : s32i
        return %19
}
