clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00034.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00034.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "x", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 0 : s32i
    store %3, %1, align 4
    scope {
        while {
            %31 = const 1 : s32i
            %32 = cast(int_to_bool) %31 : bool
            condition %32
        } do {
            break
        }
        yield
    }
    scope {
        while {
            %29 = const 1 : s32i
            %30 = cast(int_to_bool) %29 : bool
            condition %30
        } do {
            scope {
                scope {
                    %26 = load %1 : s32i, align 4
                    %27 = const 5 : s32i
                    %28 = cmp eq %26, %27 : bool
                    if %28 {
                        break
                    }
                    yield
                }
                %23 = load %1 : s32i, align 4
                %24 = const 1 : s32i
                %25 = add %23, %24 : s32i [nsw]
                store %25, %1, align 4
                continue
            }
            yield
        }
        yield
    }
    scope {
        for cond: {
            %22 = const true : bool
            condition %22
        } step: {
            yield
        } do {
            scope {
                scope {
                    %19 = load %1 : s32i, align 4
                    %20 = const 10 : s32i
                    %21 = cmp eq %19, %20 : bool
                    if %21 {
                        break
                    }
                    yield
                }
                %16 = load %1 : s32i, align 4
                %17 = const 1 : s32i
                %18 = add %16, %17 : s32i [nsw]
                store %18, %1, align 4
                continue
            }
            yield
        }
        yield
    }
    scope {
        do {
            scope {
                scope {
                    %13 = load %1 : s32i, align 4
                    %14 = const 15 : s32i
                    %15 = cmp eq %13, %14 : bool
                    if %15 {
                        break
                    }
                    yield
                }
                %10 = load %1 : s32i, align 4
                %11 = const 1 : s32i
                %12 = add %10, %11 : s32i [nsw]
                store %12, %1, align 4
                continue
            }
            yield
        } while {
            %8 = const 1 : s32i
            %9 = cast(int_to_bool) %8 : bool
            condition %9
        }
        yield
    }
    %4 = load %1 : s32i, align 4
    %5 = const 15 : s32i
    %6 = sub %4, %5 : s32i [nsw]
    store %6, %0
    %7 = load %0 : s32i
    return %7
}
