clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00035.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00035.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "x", align 4
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 4 : s32i
        store %3, %1, align 4
        scope {
                %21 = load %1 : s32i, align 4
                %22 = cast(int_to_bool) %21 : bool
                not
                %24 = cast(bool_to_int) %23 : s32i
                %25 = const 0 : s32i
                cmp
                if %26 {
                        %27 = const 1 : s32i
                        store %27, %0
                        %28 = load %0 : s32i
                        return %28
                }
                yield
        }
        scope {
                %14 = load %1 : s32i, align 4
                %15 = cast(int_to_bool) %14 : bool
                %16 = cast(bool_to_int) %15 : s32i
                %17 = const 1 : s32i
                cmp
                if %18 {
                        %19 = const 1 : s32i
                        store %19, %0
                        %20 = load %0 : s32i
                        return %20
                }
                yield
        }
        scope {
                %6 = load %1 : s32i, align 4
                minus
                %8 = const 0 : s32i
                %9 = const 4 : s32i
                sub
                cmp
                if %11 {
                        %12 = const 1 : s32i
                        store %12, %0
                        %13 = load %0 : s32i
                        return %13
                }
                yield
        }
        %4 = const 0 : s32i
        store %4, %0
        %5 = load %0 : s32i
        return %5
}
